# test_codex

./: .gitignore  7~8주차_지능1_A_B그룹_평가.xlsx  README.md  assessment_tool.xlsx  prompt_jobs.csv  pyproject.toml  t1_mappings.csv  t2_mappings.csv  t3_mappings.csv  test.xlsx  test_combined.xlsx
src/test_codex/: __init__.py  chatgpt_excel.py  cli.py  excel_agent.py
tests/: test_cli.py
