[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "test-codex"
version = "0.1.0"
description = "A tiny Python CLI starter project."
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
test-codex = "test_codex.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

